Updated Learn About section and fixed Hero section alignment

--- a/styles.css
+++ b/styles.css
@@ -37,13 +37,30 @@ ul{
 /* Hero Section */
 section.overview-hero .container{
     display: flex;
+    align-items: center;
 }
 
 section.overview-hero-image{
     width: 50%;
 }
 
-img{
+.overview-hero-image img{
     width: 90%;
     height: auto;
+}
+
+/* Learn About Section */
+.learn-about .cards{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
+}
+
+.learn-about .card-body{
+    height: 50%;
+    padding-left: 15px;
+}
+.learn-about .card img{
+    width: 100%;
+    height: 50%;
 }
